Updated Games2Delete,API,SteamGameConverter,and DirectorySearch. Cleaned up any methods or data types we are no longer using. Made it so Games2Delete pulls in stuff only from the API, changed it to where we no longer used time since last accessed and uses a boolean to show that a game was played in the last two weeks instead.